# Health-Monitoring-System

./: LICENSE  README.md  fuzzy_logic.py  main.py  openai_suggestions.py  plotting.py  style.py  suggestion_service.go  validation.py
ai_suggestion_go/: go.mod  go.sum  main.go
ai_suggestion_rust/: Cargo.toml
ai_suggestion_rust/src/: main.rs
